fixed playergame board on firefox, tweaked padding on playergame action

--- a/public/style.css
+++ b/public/style.css
@@ -1608,11 +1608,12 @@ button:disabled:after, button:disabled:hover:after, button:disabled:active:after
         height: 95vh;
     }
     .playerGame {
-        width: -moz-fit-content;
-        width: fit-content;
+        /* width: -moz-fit-content; */
+        width: max-content;
         max-width: 57vh;
-        height: 90vh;
-        padding-bottom: 0;
+        /* max-height: 90vh; */
+        height: max-content;
+        padding-bottom: 0.5em;
     }
     .playerInfo {
         display: flex;
@@ -2347,6 +2348,7 @@ td input {
     }
     .waitingModal__action{
         margin-top: 0;
+        padding: 1em;
     }
     .alert__stripe {
         width: 70vw;
